# Smashgg-OBS-Stream-Helper

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.hpp  Smashgg.cpp  Smashgg.hpp  plugin-main.cpp
